# doklgaenger-w2-template

./: .env.example  .gitignore  CLAUDE.md  README.md  bot.py  pyproject.toml
.claude/: settings.json
.claude/skills/: bot.md  diagnose.md  pick-persona.md  research-persona.md  save-notes-db.md  setup-briefing-schedule.md  setup-briefing-style.md  setup-ical.md  setup-meeting-style.md  setup-slack-app.md  setup-slack-filter.md  setup-slack-mention.md  setup-sns.md  setup-telegram.md  simulate.md  test-meeting-notes.md  test-slack-mention.md  test-sns.md  tune-meeting-notes.md  tune-persona.md  welcome-w4.md  welcome-w5.md  welcome.md
commands/: __init__.py  briefing.py  meeting_notes.py  notes_store.py  slack_mention.py  sns_publish.py
config/: briefing.yml.example  meeting_notes.yml.example  slack_mention.yml.example  sns.yml.example
docs/: botfather-guide.md  sample-meeting-notes-ko.txt  slack-app-manifest.yml  troubleshoot.md
persona/: pick-guide.md  system_prompt.md.example
scripts/: install-w3-skills.sh  start.sh  stop.sh
skills-w3/: README.md  setup-briefing-schedule.md  welcome-w3.md
