[project]
name = "doklgaenger-w2-template"
version = "0.1.0"
description = "도클갱어 W2 — 갱이가 도와주는 페르소나 챗봇 템플릿"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Triforge", email = "hello@triforge.kr"},
]
dependencies = [
    "python-telegram-bot>=22.0",
    "anthropic>=0.40.0",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["bot.py"]

[tool.ruff]
line-length = 100
target-version = "py311"
