[project]
name = "doklgaenger-w2-template"
version = "0.1.0"
description = "도클갱어 W2 — 갱이가 도와주는 페르소나 챗봇 템플릿"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Triforge", email = "hello@triforge.kr"},
]
dependencies = [
    "python-telegram-bot[job-queue]>=22.0",
    "python-dotenv>=1.0.1",
    # TF-938 hotfix 2026-05-21: anthropic SDK 제거.
    # Claude API 직호출 → Claude Code CLI 서브프로세스 전환 (subprocess 는 stdlib).
    # 참가자 본인 Claude Code 구독 사용량 안에서 동작 — 별도 API 과금 0.
    # TF-958 W3 (2026-05-28): 캘린더 아침 브리핑 — iCal + RRULE + yaml 설정.
    "requests>=2.31",
    "icalendar>=5.0",
    "python-dateutil>=2.9",
    "pyyaml>=6.0",
    # TF-981 W4 (2026-06-04): 슬랙 멘션 답변 어시스턴트.
    # Socket Mode (WebSocket outbound only) → 참가자 노트북에서 100% 완결.
    # slack-bolt 가 SocketModeHandler 와 데코레이터 핸들러를 묶어 줘서 코드가 짧다.
    # slack-sdk 는 bolt 의 transitive dep — Web API client 도 같이 따라옴.
    "slack-bolt>=1.21.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["bot.py", "commands"]

[tool.ruff]
line-length = 100
target-version = "py311"
